# MoneyPrinterV2

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLOUD_SETUP_RECOMMENDATIONS.md  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  DOCKER.md  Dockerfile  ENV_SETUP.md  Makefile  PHASE_2_SUMMARY.md  PHASE_4_SUMMARY.md  README.md  SECRETS_MANAGEMENT.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_ANALYSIS.md  TECH_DEBT_CLEANUP_SUMMARY.md  client_secrets.example.json  config.example.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
docs/: ARCHITECTURE.md  ASYNC_IO_OPPORTUNITIES.md  AffiliateMarketing.md  CONFIGURATION.md  Configuration.md  DOCSTRING_STYLE_GUIDE.md  NAMING_CONVENTIONS.md  Roadmap.md  YouTube.md
docs/api/: .gitignore  README.md  conf.py  index.rst  requirements-docs.txt
docs/api/modules/: core.rst  infrastructure.rst  platforms.rst  services.rst  utilities.rst
docs/archive/: PHASE_10_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_7_SUMMARY.md  PHASE_8_SUMMARY.md  README.md  SECURITY_IMPROVEMENTS.md  TECHNICAL_DEBT_ANALYSIS.md
src/: __init__.py  account_manager.py  art.py  browser_factory.py  cache.py  config.py  config_schema.py  constants.py  cron.py  error_handlers.py  exceptions.py  health_checks.py  http_client.py  llm_cache.py  llm_service.py  logger.py  main.py  protocols.py  rate_limiter.py  scheduler_service.py  selenium_service.py  status.py  utils.py  validation.py
src/classes/: AFM.py  Outreach.py  Tts.py  Twitter.py  YouTube - Generic.py  YouTube.py  __init__.py
tests/: __init__.py  conftest.py  test_browser_factory.py  test_cache.py  test_config.py  test_config_schema.py  test_error_handlers.py  test_exceptions.py  test_http_client.py  test_llm_cache.py  test_llm_service.py  test_protocols.py  test_selenium_service.py  test_utils.py
